--- a/styles/styles.css
+++ b/styles/styles.css
@@ -86,7 +86,7 @@ a{
     width: 100%;
     height: 800px;
     color: white;
-    background-image: url(../assets/port_index.jpg);
+    background-image: url(../assets/index/port_index.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: center -300px;
@@ -153,7 +153,7 @@ a{
 
 /* PORTADA MUJER */
 #port-mujer{
-    background-image: url(../assets/port_mujer.webp);
+    background-image: url(../assets/mujer/port_mujer.webp);
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: center 0px;
@@ -161,7 +161,7 @@ a{
 
 /* PORTADA HOMBRE */
 #port-hombre{
-    background-image: url(../assets/port_hombre.jpg);
+    background-image: url(../assets/hombre/port_hombre.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: center 0px;
@@ -169,7 +169,7 @@ a{
 
 /* PORTADA NIÑOS */
 #port-ninios{
-    background-image: url(../assets/port_niños.jpg);
+    background-image: url(../assets/ninios/port_niños.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: center 0px;
@@ -198,22 +198,22 @@ a{
 
 /* PRODUCTO DESTACADO INDEX */
 #prodest-index{
-    background-image: url(../assets/destacado_index.jpg);
+    background-image: url(../assets/index/destacado_index.jpg);
     background-position: center -300px;
 }
 /* PRODUCTO DESTACADO MUJER */
 #prodest-mujer{
-    background-image: url(../assets/prod_dest_mujer.jpg);
+    background-image: url(../assets/mujer/prod_dest_mujer.jpg);
     background-position: center -300px;
 }
 /* PRODUCTO DESTACADO HOMBRE */
 #prodest-hombre{
-    background-image: url(../assets/prod_dest_hombre.webp);
+    background-image: url(../assets/hombre/prod_dest_hombre.webp);
     background-position: center -300px;
 }
 /* PRODUCTO DESTACADO NIÑOS */
 #prodest-ninios{
-    background-image: url(../assets/prod_dest_hombre.webp);
+    background-image: url(../assets/ninios/prod_dest_hombre.webp);
     background-position: center -300px;
 }
 
@@ -225,7 +225,6 @@ a{
     width: 100%;
     height: 600px;
     color: white;
-    background-image: url(../assets/promo.webp);
     background-repeat: no-repeat;
     background-size: 100%;
     align-items:flex-start;
@@ -242,29 +241,29 @@ a{
 
 /* PRODUCTO PROMOCIÓN INDEX */
 #promo-index{
-    background-image: url(../assets/promo.webp);
+    background-image: url(../assets/index/promo.webp);
     background-position: center -300px;
 }
 /* PRODUCTO PROMOCIÓN MUJER */
 #promo-mujer{
-    background-image: url(../assets/promo_mujer.jpeg);
+    background-image: url(../assets/mujer/promo_mujer.jpeg);
     background-position: center -300px;
 }
 /* PRODUCTO PROMOCIÓN HOMBRE */
 #promo-hombre{
-    background-image: url(../assets/promo_hombre.png);
+    background-image: url(../assets/hombre/promo_hombre.png);
     background-position: center -500px;
 }
 /* PRODUCTO PROMOCIÓN NIÑOS */
 #promo-ninios{
-    background-image: url(../assets/promo2_ninios.jpg);
+    background-image: url(../assets/ninios/promo2_ninios.jpg);
     background-position: center -300px;
 }
 
 
 /* PORTADA CONTACTO */
 #port-contacto{
-    background-image: url(../assets/port_contacto.jpeg);
+    background-image: url(../assets/contacto/port_contacto.jpeg);
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: center 0px;
